--- a/Automobile_Madrid_analyse_all.ipynb
+++ b/Automobile_Madrid_analyse_all.ipynb
@@ -15,6 +15,14 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "id": "ca0067d5",
+   "metadata": {},
+   "source": [
+    "# Getting the datas from 5 years, it would be interesting to see how the Mayor of madrid change about the vehicules consomation."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 188,
    "id": "8824f402",
@@ -53,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 189,
-   "id": "866b306e",
+   "id": "ffb03e23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 190,
-   "id": "db0c42c6",
+   "id": "1821fd43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,9 +83,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "efb62dd2",
+   "metadata": {},
+   "source": [
+    ">> Got a bit trouble overhere ! according to the both PDF which explain the data structure, there are differences so I need to fix it !"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 191,
-   "id": "f81c351b",
+   "id": "c6168f39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,8 +118,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
-   "id": "c73a90b9",
+   "execution_count": 195,
+   "id": "9189964a",
    "metadata": {},
    "outputs": [
     {
@@ -124,6 +140,9 @@
     }
    ],
    "source": [
+    "\n",
+    "#todo - Check good practice to clean the code \n",
+    "\n",
     "d17Tab = updatedataBefore2020(d17step)\n",
     "d17Clean = updateValuesBefore2020(d17Tab).value_counts()\n",
     "\n",
@@ -150,9 +169,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2ed725dc",
+   "metadata": {},
+   "source": [
+    ">> fusion consomation energy (Got probleme with \"DIESEL\" probably an \\x16 or something black which is diff)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 193,
-   "id": "ae893ee7",
+   "id": "27e2febc",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +237,7 @@
     }
    ],
    "source": [
-    "# fusion consomation energy\n",
+    "\n",
     "Test = pd.concat([d17Clean,d18Clean, d19Clean, d20Clean, d21Clean], axis=1)\n",
     "print(Test)"
    ]
@@ -259,6 +286,7 @@
     "#TotalConso = pd.concat([TypeConso17,TypeConso18, TypeConso19, TypeConso20, TypeConso21], axis=1)\n",
     "#print (TypeConso17)\n",
     "#print (TypeConso20)\n",
+    "#\n",
     "chartTotal = Test.plot.bar(figsize=(15,10));\n",
     "\n",
     "print(chartTotal)"
@@ -267,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a7478fe",
+   "id": "69721f4e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -275,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "870321a7",
+   "id": "6c1ec426",
    "metadata": {},
    "outputs": [],
    "source": []
