Begin of the Consumo & genration Madrid

--- a/Automobile_Madrid_analyse_all.ipynb
+++ b/Automobile_Madrid_analyse_all.ipynb
@@ -10,16 +10,18 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "#Helping link I dont know yet !\n",
     "#https://www.linkedin.com/pulse/creating-dashboard-matplotlib-library-leonardo-a/\n",
     "#http://datos.munimadrid.es/portal/site/egob/menuitem.c05c1f754a33a9fbe4b2e4b284f1a5a0/?vgnextoid=39cddd906cbee510VgnVCM1000001d4a900aRCRD&vgnextchannel=374512b9ace9f310VgnVCM100000171f5a0aRCRD&vgnextfmt=default#"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "ca0067d5",
+   "cell_type": "markdown",
+   "id": "8d0b9a17",
    "metadata": {},
    "source": [
-    "# Getting the datas from 5 years, it would be interesting to see how the Mayor of madrid change about the vehicules consomation."
+    "### Getting the datas from 5 years, it would be interesting to see how the Mayor of madrid change about the vehicules consomation."
    ]
   },
   {
@@ -61,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 189,
-   "id": "ffb03e23",
+   "id": "7dee8886",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 190,
-   "id": "1821fd43",
+   "id": "aa8b78dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,16 +86,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efb62dd2",
+   "id": "f6e3c922",
    "metadata": {},
    "source": [
-    ">> Got a bit trouble overhere ! according to the both PDF which explain the data structure, there are differences so I need to fix it !"
+    "## Got a bit trouble overhere ! according to the both PDF which explain the data structure, there are differences so I need to fix it !"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 191,
-   "id": "c6168f39",
+   "id": "7be99d9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 195,
-   "id": "9189964a",
+   "id": "1ec66167",
    "metadata": {},
    "outputs": [
     {
@@ -170,16 +172,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ed725dc",
+   "id": "a172b4bd",
    "metadata": {},
    "source": [
-    ">> fusion consomation energy (Got probleme with \"DIESEL\" probably an \\x16 or something black which is diff)"
+    "### fusion consomation energy (Got probleme with \"DIESEL\" probably an \\x16 or something black which is diff)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 193,
-   "id": "27e2febc",
+   "id": "b6587cd8",
    "metadata": {},
    "outputs": [
     {
@@ -293,17 +295,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "69721f4e",
+   "cell_type": "markdown",
+   "id": "f7480832",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## To do : Fix it, this is close to an exploitable view, we can see the boom of the Electric by year\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c1ec426",
+   "id": "f7e88cec",
    "metadata": {},
    "outputs": [],
    "source": []
