Begin of the Consumo & genration Madrid

--- a/Consumo_&_generation_NRJ_Madrid.ipynb
+++ b/Consumo_&_generation_NRJ_Madrid.ipynb
@@ -237,9 +237,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7b4a8544",
+   "metadata": {},
+   "source": [
+    "## need to change axis and size maybe then the unity"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82e98d79",
+   "id": "59f19f73",
    "metadata": {},
    "outputs": [],
    "source": []
