--- a/tryMovil.ipynb
+++ b/tryMovil.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "3bf06a69",
+   "id": "df3bd5e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +14,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
-   "id": "3c2fe45d",
+   "execution_count": 133,
+   "id": "19386905",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,8 +36,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
-   "id": "026e26b4",
+   "execution_count": 134,
+   "id": "a096f164",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,8 +50,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
-   "id": "63839d5f",
+   "execution_count": 135,
+   "id": "3db0ac89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,8 +75,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
-   "id": "3f7afe9f",
+   "execution_count": 136,
+   "id": "d55c7920",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
        "4    RENTING  GASOLINA/HIBRIDO  2017  "
       ]
      },
-     "execution_count": 126,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,8 +214,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
-   "id": "df60f9d4",
+   "execution_count": 137,
+   "id": "77ebcf32",
    "metadata": {},
    "outputs": [
     {
@@ -275,251 +275,20 @@
        "      <td>2021</td>\n",
        "      <td>679</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>DIESEL</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>ELÉCTRICO</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>47</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>ELÉCTRICO</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>133</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>ELÉCTRICO</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>305</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>ELÉCTRICO</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>351</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>ELÉCTRICO</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>368</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>ELÉCTRICO / HÍBRIDO</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>ELÉCTRICO / HÍBRIDO</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>ELÉCTRICO/GASOLINA</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>GAS LICUADO DE PETROLEO</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>GAS NATURAL COMPRIMIDO</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>160</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>GASOLINA</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>1099</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>GASOLINA</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>1050</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>GASOLINA</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>793</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>GASOLINA</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>770</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>GASOLINA</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>1043</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>GASOLINA / GLP</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>84</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>GASOLINA / GLP</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>GASOLINA / GLP</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>GASOLINA / GLP</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>GASOLINA/GNC</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>GASOLINA/HIBRIDO</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>85</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>GASOLINA/HIBRIDO</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>GASOLINA/HIBRIDO</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>300</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>GASOLINA/HIBRIDO</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>305</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>GNC</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>113</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>GNC</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>124</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>GNC</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>124</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>No precisa</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>R.</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>R.</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>R.</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>R.</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    Energie  Date  counts\n",
-       "0                    DIESEL  2017     868\n",
-       "1                    DIESEL  2018     725\n",
-       "2                    DIESEL  2019     693\n",
-       "3                    DIESEL  2020     674\n",
-       "4                 DIESEL     2021     679\n",
-       "5          DIESEL            2021       1\n",
-       "6                 ELÉCTRICO  2017      47\n",
-       "7                 ELÉCTRICO  2018     133\n",
-       "8                 ELÉCTRICO  2019     305\n",
-       "9                 ELÉCTRICO  2020     351\n",
-       "10                ELÉCTRICO  2021     368\n",
-       "11      ELÉCTRICO / HÍBRIDO  2019      29\n",
-       "12      ELÉCTRICO / HÍBRIDO  2020      29\n",
-       "13       ELÉCTRICO/GASOLINA  2021      40\n",
-       "14  GAS LICUADO DE PETROLEO  2021      21\n",
-       "15   GAS NATURAL COMPRIMIDO  2021     160\n",
-       "16                 GASOLINA  2017    1099\n",
-       "17                 GASOLINA  2018    1050\n",
-       "18                 GASOLINA  2019     793\n",
-       "19                 GASOLINA  2020     770\n",
-       "20                 GASOLINA  2021    1043\n",
-       "21           GASOLINA / GLP  2017      84\n",
-       "22           GASOLINA / GLP  2018       1\n",
-       "23           GASOLINA / GLP  2019      21\n",
-       "24           GASOLINA / GLP  2020      21\n",
-       "25             GASOLINA/GNC  2018       1\n",
-       "26         GASOLINA/HIBRIDO  2017      85\n",
-       "27         GASOLINA/HIBRIDO  2018      22\n",
-       "28         GASOLINA/HIBRIDO  2019     300\n",
-       "29         GASOLINA/HIBRIDO  2020     305\n",
-       "30                      GNC  2018     113\n",
-       "31                      GNC  2019     124\n",
-       "32                      GNC  2020     124\n",
-       "33               No precisa  2021       8\n",
-       "34                       R.  2017       7\n",
-       "35                       R.  2018       7\n",
-       "36                       R.  2019       8\n",
-       "37                       R.  2020       8"
+       "     Energie  Date  counts\n",
+       "0     DIESEL  2017     868\n",
+       "1     DIESEL  2018     725\n",
+       "2     DIESEL  2019     693\n",
+       "3     DIESEL  2020     674\n",
+       "4  DIESEL     2021     679"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,13 +296,166 @@
    "source": [
     "group=total.groupby([\"Energie\", \"Date\"])['Num']\n",
     "test = group.size().reset_index(name='counts')\n",
-    "test"
+    "test.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "id": "8f817037",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Vehicule</th>\n",
+       "      <th>Energie</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>counts</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AMBULANCIA</td>\n",
+       "      <td>DIESEL</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>113</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AMBULANCIA</td>\n",
+       "      <td>DIESEL</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AMBULANCIA</td>\n",
+       "      <td>DIESEL</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>126</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AMBULANCIA</td>\n",
+       "      <td>DIESEL</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AMBULANCIA</td>\n",
+       "      <td>DIESEL</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>124</th>\n",
+       "      <td>turismo</td>\n",
+       "      <td>ELÉCTRICO</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>125</th>\n",
+       "      <td>turismo</td>\n",
+       "      <td>ELÉCTRICO</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>126</th>\n",
+       "      <td>turismo</td>\n",
+       "      <td>GASOLINA / GLP</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>127</th>\n",
+       "      <td>turismo</td>\n",
+       "      <td>GASOLINA / GLP</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>128</th>\n",
+       "      <td>turismo</td>\n",
+       "      <td>GASOLINA/HIBRIDO</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>129 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Vehicule           Energie  Date  counts\n",
+       "0    AMBULANCIA            DIESEL  2017     113\n",
+       "1    AMBULANCIA            DIESEL  2018     110\n",
+       "2    AMBULANCIA            DIESEL  2019     126\n",
+       "3    AMBULANCIA            DIESEL  2020     107\n",
+       "4    AMBULANCIA         DIESEL     2021     107\n",
+       "..          ...               ...   ...     ...\n",
+       "124     turismo         ELÉCTRICO  2019      25\n",
+       "125     turismo         ELÉCTRICO  2020      25\n",
+       "126     turismo    GASOLINA / GLP  2019      14\n",
+       "127     turismo    GASOLINA / GLP  2020      14\n",
+       "128     turismo  GASOLINA/HIBRIDO  2020       7\n",
+       "\n",
+       "[129 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "groupUso21=total.groupby([\"Vehicule\", \"Energie\", 'Date'])['Num']\n",
+    "dataUso21 = groupUso21.size().reset_index(name='counts')\n",
+    "\n",
+    "dataUso21"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a305b71",
+   "id": "960f629e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51814362",
    "metadata": {},
    "outputs": [],
    "source": []
