--- a/data_fotopanel.ipynb
+++ b/data_fotopanel.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "id": "6da200fa",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import geopandas\n",
+    "#import geopandas\n",
     "import matplotlib.pyplot as plt\n",
     "import osmnx as ox\n",
     "import folium\n",
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "id": "b4e5451b",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "id": "3f9d9c5f",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "id": "a5f1e128",
    "metadata": {},
    "outputs": [
@@ -174,7 +174,7 @@
        "12          social      16"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
